--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
+		"@lucide/svelte": "^0.555.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@skeletonlabs/skeleton": "^4.4.0",
@@ -32,9 +33,10 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.14",
+		"@types/ical": "^0.8.3",
 		"@types/node": "^22",
 		"@vitest/browser-playwright": "^4.0.5",
-		"decap-cms-core": "^3.9.0",
+		"decap-cms-core": "^3.0.0",
 		"drizzle-kit": "^0.31.5",
 		"drizzle-orm": "^0.44.6",
 		"eslint": "^9.38.0",
@@ -60,6 +62,6 @@
 		"@neondatabase/serverless": "^1.0.2",
 		"@node-rs/argon2": "^2.0.2",
 		"@upstash/redis": "^1.35.6",
-		"decap-cms-app": "^3.9.0"
+		"ical": "^0.8.0"
 	}
 }
