--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.14",
-		"@types/ical": "^0.8.3",
 		"@types/node": "^22",
 		"@vitest/browser-playwright": "^4.0.5",
 		"decap-cms-core": "^3.0.0",
@@ -62,6 +61,6 @@
 		"@neondatabase/serverless": "^1.0.2",
 		"@node-rs/argon2": "^2.0.2",
 		"@upstash/redis": "^1.35.6",
-		"ical": "^0.8.0"
+		"node-ical": "^0.22.1"
 	}
 }
