--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
 		"grammy": "^1.38.3",
+		"ical2json": "^4.1.1",
 		"playwright": "^1.56.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -60,7 +61,6 @@
 	"dependencies": {
 		"@neondatabase/serverless": "^1.0.2",
 		"@node-rs/argon2": "^2.0.2",
-		"@upstash/redis": "^1.35.6",
-		"node-ical": "^0.22.1"
+		"@upstash/redis": "^1.35.6"
 	}
 }
