--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"googleapis": "^170.1.0",
 		"grammy": "^1.38.3",
 		"playwright": "^1.56.1",
 		"prettier": "^3.6.2",
@@ -52,6 +53,7 @@
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.1",
+		"valibot": "^1.2.0",
 		"vite": "^7.1.10",
 		"vite-plugin-devtools-json": "^1.0.0",
 		"vitest": "^4.0.5",
