--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
+		"@lucia-auth/adapter-drizzle": "^1.1.0",
 		"@lucide/svelte": "^0.555.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@skeletonlabs/skeleton": "^4.4.0",
 		"@skeletonlabs/skeleton-svelte": "^4.4.0",
 		"@sveltejs/adapter-vercel": "^6.0.0",
-		"@sveltejs/kit": "^2.47.1",
+		"@sveltejs/kit": "^2.49.5",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/node": "^22",
 		"@vitest/browser-playwright": "^4.0.5",
+		"better-sqlite3": "^12.6.2",
 		"decap-cms-core": "^3.0.0",
 		"drizzle-kit": "^0.31.5",
 		"drizzle-orm": "^0.44.6",
@@ -44,6 +46,7 @@
 		"globals": "^16.4.0",
 		"googleapis": "^170.1.0",
 		"grammy": "^1.38.3",
+		"lucia": "^3.2.2",
 		"playwright": "^1.56.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -63,6 +66,7 @@
 		"@neondatabase/serverless": "^1.0.2",
 		"@node-rs/argon2": "^2.0.2",
 		"@upstash/redis": "^1.35.6",
+		"arctic": "^3.7.0",
 		"node-ical": "^0.22.1"
 	}
 }
